
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "callback_demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
